# ASNI

./: README.md  cfg.lua  enable_net.sh  run_tests.sh
DPA/applications/: fullmake.sh  meson.build  meson_options.txt
DPA/applications/common/: flow_parser.c  flow_parser.h  flow_pipes_manager.c  flow_pipes_manager.h  flow_skeleton.c  flow_skeleton.h  pack.c  pack.h  telemetry.c  telemetry.h  utils.c  utils.h
DPA/applications/common/device/: utils.h
DPA/applications/dpa_all_to_all/: build_device_code.sh  build_dpa_all_to_all.sh  dpa_all_to_all_params.json  meson.build
DPA/applications/dpa_all_to_all/dependencies/: meson.build
DPA/applications/dpa_all_to_all/device/: dpa_all_to_all_dev.c
DPA/applications/dpa_all_to_all/host/: dpa_all_to_all.c  dpa_all_to_all_core.c  dpa_all_to_all_core.h
DPA/applications/l2_reflector/: meson.build
DPA/applications/l2_reflector/common/: l2_reflector_common.h
DPA/applications/l2_reflector/dependencies/: meson.build
DPA/applications/l2_reflector/device/: l2_reflector_device.c
DPA/applications/l2_reflector/host/: l2_reflector.c  l2_reflector_core.c  l2_reflector_core.h  meson.build
DPA/flexio/samples/: build.sh  check_compat.sh  doca_build_dpacc.sh  meson.build
HOST/applications/FloWatcher-DPDK/run_to_completion/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  floWatcher.c  floWatcher.h  fullmake.sh  main.c  make_xchg.sh  make_xchg23.sh  make_xchg23_no_lto.sh  meson.build  meson_options.txt
HOST/applications/FloWatcher-DPDK/run_to_completion/.cache/clangd/index/: flow_watcher.h.BB65D364F9A8AF07.idx  main.c.A1D6455090BE07B7.idx  main.h.888EF5E9589D5E89.idx
HOST/applications/fake_dpdk/: README.md  fake_dpdk.c  fake_dpdk.h  fake_io.c  fake_io.h
HOST/applications/ip_counter/: ip_counter.c  ip_counter.h  meson.build
HOST/applications/l2fwd/: l2fwd.c  meson.build
HOST/applications/maglev/src/: CMakeLists.txt  Makefile_xchg  asni_maglev.cpp  dpdk_maglev.cpp  maglev.hpp  main.h  mymake.sh  test_maglev.cpp  xchg.c
HOST/applications/maglev/src/makefile_version/: Makefile_xchg
HOST/applications/mica2/: .clang-format  CMakeCache.txt  CMakeLists.txt  netbench.json  server.json  start_etcd_client.sh  start_etcd_server.sh
HOST/applications/packet_counter/: meson.build  mymake.sh  packet_counter.c  packet_counter.h
HOST/applications/router/: meson.build  router.c  router.h
HOST/applications/vignat/: CMakeLists.txt  README.md  build.sh  run.sh
HOST/applications/vignat/cmake_asni_offload_tx/: CMakeLists.txt
HOST/applications/vignat/cmake_dpdk/: CMakeLists.txt
HOST/dma_dpdk/host_mem_only_desc/: dma_dpdk.c  meson.build  stable_dma_dpdk.c  stable_dma_dpdk.h  stable_main.c
HOST/dma_dpdk/host_mem_only_desc/.cache/clangd/index/: dma_dpdk.c.891CC51B9AD27A33.idx  stable_dma_dpdk.c.EED52D1005168CBF.idx  stable_dma_dpdk.h.A7C24188127463D3.idx  stable_main.c.B0B94850671D282D.idx
HOST/dpdk/ASQ/: asq.c  asq.h  data.csv  meson.build  out.txt  server.c
HOST/dpdk/BASELINE/: baseline.c  baseline.h  meson.build
HOST/dpdk/DIRECTPATH/: common.c  defs.h  server.c
HOST/dpdk/PURE_DPDK/: build.sh  fullmake.sh  (+3 more)
HOST/dpdk/XCHG-23/: meson.build  mymake.sh  mymake_nikita.sh  server.c  xchg.c
HOST/verbs/: Makefile  driver.c
HOST/xchg_ver/: Makefile  main.h  make_xchg.sh  make_xchg_nolto.sh  xchg.c  xchg23.c  xchg_ver.c  xchg_ver.h  xchg_ver23.c  xchg_ver23.h
NIC/NIC_UTILS/: meson.build  port_forwarder.c  port_forwarder_busy.c  software_forwarder.c
NIC/dma_dpdk/host_mem_only_desc/: meson.build  mymake.sh  stable_dma_dpdk.c
NIC/dma_dpdk/host_mem_only_desc/utils/: dpdk_utils.c  dpdk_utils.h
NIC/dpdk/ASQ/: client.c  fullmake.sh  huge.c  meson.build  meson_options.txt  port_forwarder.c  software_baseline.c  test.c
NIC/dpdk/ASQ/descriptor/: descriptor_click.h  descriptor_dpdk.h  descriptor_ipfill.h
NIC/dpdk/ASQ/hardware_solution/common/src/: doca_exception.hpp  dpdk_utils_asni.c  dpdk_utils_asni.h  dpdk_utils_simple.c  dpdk_utils_simple.h  dpi_worker.h  flow_parser.h  offload_rules.c
NIC/dpdk/ASQ/hardware_solution/encapsulation/: flow_vxlan_encap_main.c  flow_vxlan_encap_sample.c  meson.build  mymake.sh  mymake_nic.sh  start_encap.sh
NIC/dpdk/ASQ/hardware_solution/utils/: processing.c  processing.h
NIC/dpdk/ASQ/multi_app_helper/: fullmake.sh  meson.build  rule_offloader.c
TESTING/: meson.build  receiver.c  receiver_sg.c  sender.c  sender_sg.c  test_utils.c  test_utils.h
arm/: BYTES.csv  BypassBYTES.csv  BypassCOUNT.csv  BypassCPU-LOAD.csv  BypassDROPPED.csv  BypassDROPPEDPC.csv  BypassLAT00.csv  BypassLAT01.csv  BypassLAT100.csv  BypassLAT50.csv  BypassLAT95.csv  BypassLAT99.csv  BypassLAT999.csv  BypassLATENCY.csv  BypassPPS.csv  BypassRCVTIME.csv  BypassSENT.csv  BypassTESTTIME.csv  BypassTHROUGHPUT.csv  BypassTX.csv  BypassTXPPS.csv  CDFLATVAL-BypassCDFLATPC.csv  CDFLATVAL-CDFLATPC.csv  CDFLATVAL-DPDKCDFLATPC.csv  COUNT.csv  CPU-LOAD.csv  DPDKDROPPED.csv  DPDKLAT01.csv  DPDKLAT999.csv  DPDKPPS.csv  DPDKRCVTIME.csv  DPDKTESTTIME.csv  DPDKTX.csv  DROPPEDPC.csv  LAT00.csv  LAT100.csv  LAT50.csv  LAT95.csv  LAT99.csv  LATENCY.csv  (+3 more)
bf/: BYTES.csv  COUNT.csv  CPU-LOAD.csv  DROPPED.csv  DROPPEDPC.csv  LAT100.csv  LAT50.csv  LAT95.csv  LATENCY.csv  PPS.csv  RCVTIME.csv  SENT.csv  TESTTIME.csv  THROUGHPUT.csv  TX.csv  TXPPS.csv
nobf/: BYTES.csv  COUNT.csv  CPU-LOAD.csv  DROPPED.csv  DROPPEDPC.csv  LAT100.csv  LAT95.csv  LAT99.csv  LATENCY.csv  PPS.csv  RCVTIME.csv  SENT.csv  TESTTIME.csv  THROUGHPUT.csv  TX.csv  TXPPS.csv
packet_splitting/: split.h
script_utils/: p4tg.json
utils/: asq_descriptors.h  common.c  common.h  consts.h  dgu_utils.c  dgu_utils.h  dma_exchange.c  dma_exchange.h  dma_jobs.c  dma_jobs.h  dma_setup.c  dma_setup.h  doca_utils.h  dpdk_utils2.c  dpdk_utils2.h  flow_utils.c  flow_utils.h  my_structs.h  rdtsc.h  receive_data_from_host.c  receive_data_from_host.h  rte_flow_utils.c  rte_flow_utils.h  set_dma_buffer.c  set_dma_buffer.h  stats.h  udp_comm.c  udp_comm.h  utils.c  utils.h
utils/src/: doca_unique_ptr.hpp  dpdk_utils.c  dpi_worker.c  flow_parser.c  offload_rules.c  offload_rules.h
(+93 files in other folders)
