#
# Copyright (c) 2021-2024 NVIDIA CORPORATION & AFFILIATES, ALL RIGHTS RESERVED.
#
# This software product is a proprietary product of NVIDIA CORPORATION &
# AFFILIATES (the "Company") and all right, title, and interest in and to the
# software product, including all associated intellectual property rights, are
# and shall remain exclusively with the Company.
#
# This software product is governed by the End User License Agreement
# provided with the software product.
#

option('enable_all_applications', type: 'boolean', value: false,
	description: 'Enable all DOCA applications.')

option('enable_cross_compilation_to_dpu', type: 'boolean', value: false,
	description: 'Enable cross-compilation mode from host to DPU.')

option('enable_deprecated_features', type: 'boolean', value: true,
	description: 'Silence compilation warnings regarding depreated DOCA features.')

option('enable_trace_log', type: 'boolean', value: false,
	description: 'Enable trace log.')

option('enable_pcc_application_tx_counter_sampling', type: 'boolean', value: false,
	description: 'Enable sampling of TX bytes counter in PCC application.')

option('enable_pcc_application_np_rx_rate', type: 'boolean', value: false,
	description: 'Enable PCC application CC rate update via notification point RX bytes.')

# Enables per application - turned off by default
option('enable_allreduce', type: 'boolean', value: false,
	description: 'Enable Allreduce application.')
option('enable_app_shield_agent', type: 'boolean', value: false,
	description: 'Enable the App Shield Agent application.')
option('enable_dma_copy', type: 'boolean', value: false,
	description: 'Enable the DMA copy application.')
option('enable_dpa_all_to_all', type: 'boolean', value: false,
	description: 'Enable DPA All to All application.')
option('enable_file_compression', type: 'boolean', value: false,
	description: 'Enable the File Compression application.')
option('enable_file_integrity', type: 'boolean', value: false,
	description: 'Enable the File Integrity application.')
option('enable_gpu_packet_processing', type: 'boolean', value: false,
	description: 'Enable GPUNetIO packet processing application.')
option('enable_ipsec_security_gw', type: 'boolean', value: false,
	description: 'Enable IPsec Security Gateway application.')
option('enable_psp_gateway', type: 'boolean', value: false,
	description: 'Enable PSP Gateway application.')
option('enable_l2_reflector', type: 'boolean', value: true,
	description: 'Enable L2 Reflector application.')
option('enable_nat', type: 'boolean', value: false,
	description: 'Enable NAT application.')
option('enable_pcc', type: 'boolean', value: false,
	description: 'Enable PCC application.')
option('enable_secure_channel', type: 'boolean', value: false,
	description: 'Enable Secure Channel application.')
option('enable_simple_fwd_vnf', type: 'boolean', value: false,
	description: 'Enable Simple Forward VNF application.')
option('enable_switch', type: 'boolean', value: false,
	description: 'Enable Switch application.')
option('enable_urom_rdmo', type: 'boolean', value: false,
	description: 'Enable UROM RDMO application.')
option('enable_urom_ucc', type: 'boolean', value: false,
	description: 'Enable UROM UCC application.')
option('enable_yara_inspection', type: 'boolean', value: false,
	description: 'Enable Yara Inspection application.')
